# openprom

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  OPTIMIZATION_REPORT.md  README.md  TEST_REPORT.md  check_static.py  docker-compose.yml  prometheus.yml  pyproject.toml  quick_test.py  requirements.txt  start-all.bat  start-all.ps1  start.bat  test_web.py
config/: settings.yaml
doc/openprom/03-task-details/: TASK-001-前置清理.md  (+16 more)
doc/project-knowledge-base/: 1.项目概述.md  2.技术栈说明.md  3.架构设计文档.md  4.数据库结构.md  5.术语定义.md
frontend/: app.js  index.html  styles.css
openprom/: __init__.py  api.py
openprom/agents/: __init__.py  runner.py
openprom/core/: base_analyzer.py  saddle_engineering.py
openprom/data/: __init__.py  loader.py  poetry_sample.json  rusheng.json
openprom/engines/: __init__.py  meter.py  pingze.py
openprom/infrastructure/: __init__.py  cache.py  database.py  logging.py  task_trace.py
openprom/knowledge/: __init__.py  metrics.py  rule_signals.py  schema.py
openprom/routers/: __init__.py  common.py  couplet.py  health.py  knowledge.py  meter.py  shi.py  tasks.py
openprom/services/: __init__.py  couplet_generator.py  couplet_scorer.py  llm_client.py  meter_tool.py  shi_generator.py
openprom/tools/: __init__.py  poetry_schemas.py  poetry_tools.py  registry.py  schemas.py
openprom/utils/: __init__.py  env_config.py  json_parser.py  scoring.py
porm/: __init__.py  api.py  main.py  tui_launcher.py
porm/core/: __init__.py  analyzer.py  analyzer_interface.py  base_analyzer.py  dual_api_scorer.py  fusion_engine.py  saddle_engineering.py
porm/data/: __init__.py
porm/engines/: __init__.py  meter.py  pingze.py
porm/infrastructure/: __init__.py  cache.py  database.py  logging.py
porm/ui/: __init__.py  tui.py
porm/utils/: __init__.py  common.py  config.py  env_config.py  json_parser.py  scoring.py
scripts/: build_rusheng_from_rhymebook.py  fetch_corpus.py  index_poetry.py  manual_api_test.py  setup_config.py
tests/: conftest.py  test_api_full.py  test_couplet.py  test_dual_api.py  test_integration.py  test_llm_client.py  test_pingze_domain.py  test_routers.py  test_routers_knowledge.py  test_routers_tasks.py  test_services.py  test_web_interface.py
tests/agents/: test_runner.py
tests/eval/: test_retrieval_quality.py
tests/knowledge/: test_agents.py  test_degradation.py  test_feedback.py  test_indexing.py  test_metrics.py
(+81 files in other folders)
